--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -15,14 +15,23 @@
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme">
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
+            >
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:menu="@menu/home"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay" >
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/hero_image"
+                android:layout_width="150dp"
+                android:visibility="gone"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/gdg_logo"
+                android:contentDescription="@string/app_name"/>
+            </com.google.android.material.appbar.MaterialToolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
 
