--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,10 +25,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:padding="@dimen/activity_vertical_margin"
             tools:context=".ui.main.login.LoginFragment">
             <ProgressBar
                 android:id="@+id/login_loading"
@@ -51,12 +48,13 @@
                     app:layout_constraintEnd_toStartOf="@id/guide"
                     app:layout_constraintTop_toBottomOf="@id/and"
             />
+
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guide"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintGuide_percent="1.01"
                     android:orientation="vertical"
+                    app:layout_constraintGuide_percent="1.01"
                     />
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/and"
@@ -64,7 +62,7 @@
                     android:layout_height="192dp"
                     android:layout_margin="16dp"
                     app:tint="@color/colorPrimary"
-                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
