--- a/app/src/main/res/layout/fragment_mars_real_estate_overview.xml
+++ b/app/src/main/res/layout/fragment_mars_real_estate_overview.xml
@@ -43,7 +43,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:listData="@{viewModel.properties}"
+            app:listMarsPropertyData="@{viewModel.properties}"
             app:spanCount="2"
             tools:itemCount="16"
             tools:listitem="@layout/mars_real_estate_grid_view_item" />
