--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,12 @@
     <color name="colorPrimaryDark">#00a956</color>
     <color name="colorAccent">#7affb4</color>
     <color name="colorWhite">#FFFFFF</color>
-
+    <color name="primaryColor">#34a853</color>
+    <color name="primaryLightColor">#6bda81</color>
+    <color name="primaryDarkColor">#007827</color>
+    <color name="secondaryColor">#4285f4</color>
+    <color name="secondaryLightColor">#80b4ff</color>
+    <color name="secondaryDarkColor">#0059c1</color>
     <color name="ic_launcher_background">#3DDC84</color>
 
     <color name="google_blue">#4285f4</color>
