--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,5 +30,5 @@
     <dimen name="icon_size">64dp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="triple_margin">48dp</dimen>
-
+    <dimen name="spacing_normal">16dp</dimen>
 </resources>
