--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,10 +25,14 @@
     <dimen name="medium_text_size">20sp</dimen>
     <dimen name="large_text_size">33sp</dimen>
     <dimen name="corner_radius">4dp</dimen>
-<!--Sleep tracker-->
+    <!--Sleep tracker-->
     <dimen name="margin">16dp</dimen>
     <dimen name="icon_size">64dp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="triple_margin">48dp</dimen>
     <dimen name="spacing_normal">16dp</dimen>
+    <!--PropertyAnimation -->
+
+    <dimen name="standard_margin">8dp</dimen>
+
 </resources>
