Home Activity - DiceFragment - TriviaGameFragment - Desert Pusher Fragment - Guess It Fragment - SleepTracker Fragment with Recycler View - mars real estate - auth/main with coroutines - devbyte Viewer - GDG finder - firebase activity - Egg Timer notifications - property animator - Mini Paint - Clipping Example - Custom Fan Controller - Heart Fill - Tick Cross

--- a/app/src/main/res/layout/fragment_property_animation.xml
+++ b/app/src/main/res/layout/fragment_property_animation.xml
@@ -18,13 +18,13 @@
     <data>
 <variable
     name="propertyAnimator"
-    type="com.example.android.androidmarki.ui.home.propertyAnimation.PropertyAnimation" />
+    type="com.example.android.androidmarki.ui.home.propertyAnimation.PropertyAnimationFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.propertyAnimation.PropertyAnimation">
+        tools:context=".ui.home.propertyAnimation.PropertyAnimationFragment">
 
 
         <com.google.android.material.button.MaterialButton
