--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,9 @@
     <color name="background_grey">#ffDDDDDD</color>
     <color name="text_light">#ff666666</color>
     <color name="text_black">#ff222222</color>
+
+    <!--mini_Paint-->
+
+    <color name="colorBackground">#FFFF5500</color>
+    <color name="colorPaint">#FFFFEB3B</color>
 </resources>
