--- a/app/src/main/res/layout/fragment_dev_byte.xml
+++ b/app/src/main/res/layout/fragment_dev_byte.xml
@@ -19,7 +19,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ui.home.devByteViewer.DevByteFragment">
+    tools:context=".ui.home.devByteViewer.DevByteFragment">
 
     <data>
 
