--- a/app/src/main/res/layout/fragment_egg_timer.xml
+++ b/app/src/main/res/layout/fragment_egg_timer.xml
@@ -17,7 +17,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.eggTimer.EggTimerFragment">
 
     <data>
 
@@ -29,7 +30,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.EggTimerFragment">
+      >
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/textView"
