--- a/app/src/main/res/layout/fragment_guess_it_game.xml
+++ b/app/src/main/res/layout/fragment_guess_it_game.xml
@@ -16,7 +16,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.guessIt.game.GuessItGameFragment">
 
     <data>
 
@@ -29,7 +30,7 @@
         android:id="@+id/game_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.guessIt.game.GuessItGameFragment">
+>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/word_is_text"
