--- a/app/src/main/res/layout/fragment_mars_real_estate_detail.xml
+++ b/app/src/main/res/layout/fragment_mars_real_estate_detail.xml
@@ -19,7 +19,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.marsRealEstate.detail.MarsRealEstateDetailFragment">
 
     <data>
         <variable
@@ -30,7 +31,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DetailFragment">
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
