--- a/app/src/main/res/layout/fragment_mars_real_estate_overview.xml
+++ b/app/src/main/res/layout/fragment_mars_real_estate_overview.xml
@@ -19,7 +19,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.marsRealEstate.overview.MarsRealEstateOverviewFragment">
 
     <data>
         <variable
@@ -30,7 +31,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.android.marsrealestate.MainActivity">
+       >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photos_grid"
