--- a/app/src/main/res/layout/fragment_sleep_tracker_sleep_detail.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker_sleep_detail.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.home.sleepTracker.sleepdetail.SleepTrackerSleepDetailFragment">
     <!-- Data to make available to the XML via data binding. In this case,
          the whole ViewModel, so that we can access the LiveData,
          click handlers, and state variables. -->
@@ -14,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.sleepTracker.sleepdetail.SleepDetailFragment">
+       >
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/quality_image"
