--- a/app/src/main/res/layout/fragment_sleep_tracker_sleep_quality.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker_sleep_quality.xml
@@ -17,7 +17,8 @@
 <!-- Wrapping the layout into /layout to make it available with data binding. -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.sleepTracker.sleepquality.SleepTrackerSleepQualityFragment">
 
     <!-- Data to make available to the XML via data binding. In this case,
      the whole ViewModel, so that we can access the LiveData,
@@ -33,7 +34,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.home.sleepTracker.sleepquality.SleepQualityFragment">
+       >
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/title_text"
