--- a/app/src/main/res/layout/fragment_trivia_about.xml
+++ b/app/src/main/res/layout/fragment_trivia_about.xml
@@ -16,7 +16,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.android.androidmarki.ui.home.trivia.about.TriviaAboutFragment">
 
 
     <ScrollView
@@ -24,7 +25,7 @@
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:fillViewport="true"
-        tools:context="com.example.android.androidmarki.ui.home.trivia.about.TriviaAboutFragment">
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
