--- a/app/src/main/res/layout/fragment_trivia_rules.xml
+++ b/app/src/main/res/layout/fragment_trivia_rules.xml
@@ -16,14 +16,15 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.trivia.rules.TriviaRulesFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:scrollbars="none"
-        tools:context=".ui.home.trivia.rules.TriviaRulesFragment">
+>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
