Home Activity - DiceFragment - TriviaGameFragment - Desert Pusher Fragment - Guess It Fragment - SleepTracker Fragment with Recycler View - mars real estate - auth/main with coroutines - devbyte Viewer - GDG finder - firebase activity - Egg Timer notifications - property animator - Mini Paint - Clipping Example - Custom Fan Controller - Heart Fill - Tick Cross - geo_maps - geo_fence - motion_layout -coordinate motion

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -61,4 +61,8 @@
     <!--    GEOFENCE (Treasure Hunt)-->
 
     <dimen name="hint_text_size">24sp</dimen>
+
+    <!--    Coordinate motion-->
+
+    <dimen name="offset_y">300dp</dimen>
 </resources>
