--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -84,6 +84,10 @@
             android:icon="@drawable/splash_icon"
             android:title="@string/motion_layout_app_name" />
         <item
+            android:id="@+id/nav_coordinate_motion"
+            android:icon="@drawable/splash_icon"
+            android:title="@string/coordinated_motion_app_name" />
+        <item
             android:id="@+id/nav_firebase"
             android:icon="@drawable/googleg_standard_color_18"
             android:title="@string/firebase" />
