--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -113,4 +113,5 @@
         tools:layout="@layout/fragment_geo_fence"
         />
     <include app:graph="@navigation/motion_layout_nav_graph" />
+    <include app:graph="@navigation/coordinated_motion_nav_graph" />
 </navigation>
