--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00a956</color>
     <color name="colorAccent">#7affb4</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="windowBackground">#F5F5F5</color>
 
     <color name="secondaryColor">#4285f4</color>
     <color name="secondaryLightColor">#80b4ff</color>
@@ -45,4 +46,6 @@
 
     <color name="colorBackground">#FFFF5500</color>
     <color name="colorPaint">#FFFFEB3B</color>
+
+
 </resources>
