--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,13 +13,12 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
         <include
             android:id="@+id/include_app_bar_home"
-            layout="@layout/app_bar_home"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            layout="@layout/app_bar_home" />
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
@@ -27,9 +26,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:fitsSystemWindows="true"
             android:animateLayoutChanges="true"
+            android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_home"
+            app:itemTextColor="@drawable/drawer_item_color"
             app:menu="@menu/activity_home_drawer" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
