--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -21,13 +21,14 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize"
                 app:popupTheme="@style/AppTheme.PopupOverlay" >
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/hero_image"
                 android:layout_width="150dp"
                 android:visibility="gone"
-                android:layout_height="match_parent"
+                android:layout_height="44dp"
                 app:srcCompat="@drawable/gdg_logo"
                 android:contentDescription="@string/app_name"/>
             </com.google.android.material.appbar.MaterialToolbar>
