--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,8 @@
         <attr name="fanColor2" format="color" />
         <attr name="fanColor3" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="ScrollChildSwipeRefreshLayout">
+        <attr name="refreshing" format="boolean" />
+    </declare-styleable>
 </resources>
